# swagger/protohub.json
@@ -686,7 +686,7 @@
       }
     },
     "/api/v1/user/change_password": {
-      "post": {
+      "put": {
         "operationId": "changePassword",
         "responses": {
           "200": {
@@ -734,7 +734,7 @@
       }
     },
     "/api/v1/user/delete": {
-      "post": {
+      "delete": {
         "operationId": "deleteUser",
         "responses": {
           "200": {
@@ -823,7 +823,7 @@
       }
     },
     "/api/v1/user/list": {
-      "post": {
+      "get": {
         "operationId": "getUserList",
         "responses": {
           "200": {
@@ -835,16 +835,45 @@
         },
         "parameters": [
           {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/UserListRequest"
-            }
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32",
+            "default": "1"
+          },
+          {
+            "name": "page_size",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32",
+            "default": "10"
+          },
+          {
+            "name": "username",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "mobile",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "email",
+            "in": "query",
+            "required": false,
+            "type": "string"
           }
         ],
         "tags": [
           "user"
+        ],
+        "consumes": [
+          "multipart/form-data"
         ]
       }
     },
@@ -879,7 +908,7 @@
       }
     },
     "/api/v1/user/update": {
-      "post": {
+      "put": {
         "operationId": "updateUser",
         "responses": {
           "200": {
@@ -972,7 +1001,11 @@
       "properties": {
         "status": {
           "type": "integer",
-          "format": "int32"
+          "format": "int32",
+          "enum": [
+            "1",
+            "2"
+          ]
         },
         "username": {
           "type": "string"
@@ -992,6 +1025,7 @@
       },
       "title": "CreateUserRequest",
       "required": [
+        "status",
         "username",
         "password",
         "mobile",
@@ -1009,7 +1043,10 @@
           }
         }
       },
-      "title": "DeleteProjectRequest"
+      "title": "DeleteProjectRequest",
+      "required": [
+        "ids"
+      ]
     },
     "DeleteRoleRequest": {
       "type": "object",
@@ -1022,7 +1059,10 @@
           }
         }
       },
-      "title": "DeleteRoleRequest"
+      "title": "DeleteRoleRequest",
+      "required": [
+        "ids"
+      ]
     },
     "DeleteUsersByIDsRequest": {
       "type": "object",
@@ -1030,7 +1070,8 @@
         "ids": {
           "type": "array",
           "items": {
-            "type": "string"
+            "type": "integer",
+            "format": "int64"
           }
         }
       },
@@ -1946,6 +1987,10 @@
     "UserListData": {
       "type": "object",
       "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
         "status": {
           "type": "integer",
           "format": "int32"
@@ -1965,6 +2010,7 @@
       },
       "title": "UserListData",
       "required": [
+        "id",
         "username",
         "mobile",
         "email"
